--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,5 +1,5 @@
 {% extends 'nonavbar.html' %} 
-
+{% load static %}
 {% block content %}
     <main class="profile-page layout layout--2">
       <div class="container">
@@ -143,6 +143,7 @@
         <!--  End -->
       </div>
     </main>
-    <script src="script.js"></script>
+   
+
     {% endblock content %}
 
