--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %} 
-
+{% load static%}
 {% block content %}
 
    <main class="layout layout--3">
@@ -47,9 +47,9 @@
               Create Post
             </a>
           </div>
-
+          
           {% include 'base/feed_component.html' %}
-
+        
         </div>
         <!-- Room List End -->
 
@@ -59,5 +59,7 @@
         <!-- Activities End -->
       </div>
     </main>
-
+    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/room_action.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 {% endblock %}
