--- a/base/templates/base/update-user.html
+++ b/base/templates/base/update-user.html
@@ -32,7 +32,7 @@
 
 
                         <div class="form__action">
-                            <a class="btn btn--dark" href="index.html">Cancel</a>
+                            <a class="btn btn--dark" href="{% url 'user-profile' user.id %}">Cancel</a>
                             <button class="btn btn--main" type="submit">Update</button>
                         </div>
                     </form>
