--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -18,8 +18,8 @@
             <form class="form" action="" method="POST">
               {% csrf_token %}
               <div class="form__group form__group">
-                <label for="room_name">Username</label>
-                <input id="username" name="username" type="text" placeholder="e.g. Luvic_ivy" />
+                <label for="room_name">Email</label>
+                <input id="username" name="email" type="text" placeholder="e.g. Luvic_ivy" />
               </div>
               <div class="form__group">
                 <label for="password">Password</label>
