--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,7 @@
         <div class="header__user">
           <a href="{% url 'user-profile' user.id %}">
             <div class="avatar avatar--medium active">
-              <img src="{% static 'images/avatar.svg' %}" />
+              <img src="{{request.user.avatar.url}}" />
             </div>
             <p>{{request.user.username}} <span>@{{request.user.username}}</span></p>
           </a>
@@ -79,4 +79,3 @@
 {% else %}
 <a href="{% url 'login' %}">Login</a>
 {% endif %} -->
-
