After Long time push

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -34,7 +34,7 @@
             <div>
               <h2></h2>
 
-              <p>{{room_count}} Posts available</p>
+              <!-- <p>{{room_count}} Posts available</p> -->
             </div>
 
             <a class="btn btn--main" href="{% url 'create-room' %}">
