--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -19,7 +19,7 @@
               {% csrf_token %}
               <div class="form__group form__group">
                 <label for="room_name">Email</label>
-                <input id="username" name="email" type="text" placeholder="e.g. Luvic_ivy" />
+                <input id="username" name="email" type="text" placeholder="e.g. Luvic@gmail.com" />
               </div>
               <div class="form__group">
                 <label for="password">Password</label>
