--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -34,7 +34,7 @@
             </div>
   
             <div class="form__group">
-              <label for="room_name">Place/What</label>
+              <label for="room_name">Where/What</label>
               {{form.name}}
             </div>
 
@@ -56,6 +56,7 @@
               </datalist>
 
             </div> -->
+            
 
 
 
