--- a/base/templates/base/feed_components_profile.html
+++ b/base/templates/base/feed_components_profile.html
@@ -5,7 +5,7 @@
 <div class="roomListRoom__header">
     <a href="{% url 'user-profile' room.host.id %}" class="roomListRoom__author">
     <div class="avatar avatar--small">
-        <img src="https://randomuser.me/api/portraits/women/11.jpg" />
+        <img src="{{room.host.avatar.url}}" />
     </div>
     <span>@{{room.host.username}}</span>
     </a>
@@ -36,7 +36,7 @@
     {{room.participants.all.count}} Views
     </a>
     {% if room.complete%}
-    <a class=" btn btn--dark" id="id_{{room.id}}"  onclick="completeTask('{{user.id}}','{{room.id}}')">Complete</a>
+    <a class=" btn btn--dark" id="id_{{room.id}}"  onclick="completeTask('{{user.id}}','{{room.id}}')">Discoverd</a>
     {%endif%}
     <p class="roomListRoom__topic">{{room.topic.name}}</p>
     
