--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -1,17 +1,11 @@
 {% extends 'main.html' %} 
 {% load static%}
 {% block content %}
-  <main class="profile-page layout layout--3">
+  <main class="profile-page layout ">
     <div class="container">
       <!-- Topics Start -->
-      {% include 'base/topics_component.html' %}
+
       <!-- Topics End -->
-
-
-
-      
-
-
 
       <!-- Room List Start -->
       <div class="roomList">
@@ -50,7 +44,7 @@
       <!-- Room List End -->
 
       <!-- Activities Start -->
-      {% include 'base/activity_component.html' %}
+      <!-- {% include 'base/activity_component.html' %} -->
       <!-- Activities End -->
     </div>
   </main>
